--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,11 +27,11 @@
 
         <a href="{{ site.github.repository_url }}" class="button fork"><strong>View On GitHub</strong></a>
         {% if site.show_downloads %}
-          <div class="downloads">
+          <div class="about me">
             <span>Downloads:</span>
             <ul>
-              <li><a href="{{ site.github.zip_url }}" class="button">ZIP</a></li>
-              <li><a href="{{ site.github.tar_url }}" class="button">TAR</a></li>
+              <li><a href="{{ site.github.zip_url }}" class="button">Me</a></li>
+              <li><a href="{{ site.github.tar_url }}" class="button">You</a></li>
             </ul>
           </div>
         {% endif %}
