--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,8 +27,8 @@
 
         <a href="{{ site.github.repository_url }}" class="button fork"><strong> 目 录 </strong></a>
         {% if site.show_downloads %}
-          <div class="about me">
-            <span>Downloads:</span>
+          <div class="downloads">
+            <span>About Me:</span>
             <ul>
               <li><a href="{{ site.github.zip_url }}" class="button">Me</a></li>
               <li><a href="{{ site.github.tar_url }}" class="button">You</a></li>
