--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,9 +28,9 @@
         <a href="{{ site.github.repository_url }}" class="button fork"><strong> 目 录 </strong></a>
         {% if site.show_downloads %}
           <div class="downloads">
-            <span>About Me:</span>
+            <span> About :</span>
             <ul>
-              <li><a href="{{ site.github.zip_url }}" class="button">Me</a></li>
+              <li><a href="https://boyahoo.github.io/" class="button">Me</a></li>
               <li><a href="{{ site.github.tar_url }}" class="button">You</a></li>
             </ul>
           </div>
